# Integrador_2

./: README.md
backend/: .gitignore  add_bio_column.sql  add_file_sizes.sql  auth.py  main.py  mlflow.db  model.py  pyproject.toml  requirements.txt  settings.py  supabase_client.py  supabase_schema.sql
backend/app/: main.py
backend/app/api/routes/: auth.py  datasets.py  experiments.py  health.py  model.py  registry.py  system.py  user.py  users.py
backend/app/core/: config.py  supabase_client.py
backend/app/schemas/: dataset.py  experiment.py  model.py  registry.py
backend/app/services/: fine_tuning_service.py  mlflow_logger.py  model_manager.py  model_service.py  registry.py  storage.py  training_service.py
backend/scripts/: convert_coco_masks.py
backend/tests/: conftest.py  test_api.py  test_registry.py
docs/backlog/: desktop.ini  product_backlog_grafeno.xlsx
docs/uml/: Diagrama_Casos_de_Uso_plantuml.txt  Diagrama_Componentes_plantuml.txt  Diagrama_Despliegue_plantuml.txt  Diagrama_Secuencia_plantuml.txt
frontend/: app.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/Button/: Button.tsx
frontend/src/components/Card/: Card.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/InputText/: InputText.tsx
frontend/src/components/Modal/: Modal.tsx
frontend/src/pages/: Analytics.tsx  Auth.tsx  Dashboard.tsx  Datasets.tsx  Experiments.tsx  Models.tsx  SystemOverview.tsx  UserTable.tsx
(+6 files in other folders)
