[project]
name = "graphene-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt",
    "email-validator",
    "fastapi[standard]",
    "httpx",
    "numpy",
    "pillow",
    "pyjwt",
    "pytest",
    "python-dotenv",
    "python-multipart",
    "supabase",
    "scikit-image",
    "scipy",
    "tensorflow",
    "tensorflow-intel",
    "torch",
    "segmentation-models-pytorch",
    "timm",
    "uvicorn[standard]",
    "websockets",
    "mlflow"
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]